--- a/src/components/NavbarModal/NavbarModal.css
+++ b/src/components/NavbarModal/NavbarModal.css
@@ -1,13 +1,15 @@
 .iconDecoration {
   text-decoration: underline;
   text-decoration-color: #01957d;
+  font-size: 20px;
 }
 .icons {
   height: auto;
   width: 30px;
 }
-.closeModal {
-  text-decoration: none;
-  border: 1px solid black;
-  width: 10%;
+.closeModal.modal-header {
+  border: transparent;
+  /* padding: 6px; */
+  /* width: auto;
+  float: right; */
 }
